--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export"
   },
   "dependencies": {
-    "firebase": "^8.3.1",
+    "firebase": "^8.2.1",
     "lodash.debounce": "^4.0.8",
     "lodash.kebabcase": "^4.1.1",
-    "next": "10.0.9",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-firebase-hooks": "^3.0.3",
-    "react-hook-form": "^7.0.0",
+    "next": "10.0.4",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-firebase-hooks": "^2.2.0",
+    "react-hook-form": "^6.14.2",
     "react-hot-toast": "^1.0.2",
     "react-markdown": "^5.0.3"
   }
